<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>first_ros_package</name>
  <version>0.1.0</version>
  <description>This package contains introductory ROS 2 nodes and launch files for learning and demonstration purposes.</description>
  <maintainer email="adrian.carauleanu@gmail.com">Adrian Carauleanu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
